# java-jni

./: .gitignore  CMakeLists.txt  JNIJavaSample.java  README.md  build_n_run.sh  library.h
cpp/: library.cpp
